[package]
name = "controller"
version = "0.1.0"
authors = ["author <author@email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = "3.0.0-beta.2"
ssh = "0.1.4"
hex = "0.3.0"
reqwest = "0.9.24"
rsa = "0.4.0"
rand = "0.8.3"
shared = { path="../shared" }
pelite = "0.9.0"