[package]
name = "loader"
version = "0.1.0"
authors = ["author <author@email>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
reqwest ={version = "0.11.3", features = ["blocking", "json"]}
shared = { path="../shared" }
base64 = "0.13.0"
hex = "0.3.0"
rsa = "0.4.0"
is_elevated = "0.1.2"
runas = "0.2.1"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'