[package]
name = "server"
version = "0.1.0"
authors = ["perfilev <perfilev@group-ib.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
error-chain = "0.12.4"
lazy_static = "1.4.0"
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
rand = "0.8.3"
rsa = "0.4.0"
sha2 = "0.9.3"
shared = { path="../shared" }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["diesel_sqlite_pool", "json"]
