[package]
name = "shared"
version = "0.1.0"
authors = ["perfilev <perfilev@group-ib.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
error-chain = "0.12.4"
lazy_static = "1.4.0"
sha2 = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rsa = "0.4.0"
rand = "0.8.3"
reqwest = {version="0.10.3", features = ["json", "blocking"]}
